--- a/exer01.css
+++ b/exer01.css
@@ -1,7 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Zilla+Slab:wght@700&display=swap');
 
+div{
+    border-width: 1px;
+    border-style: solid;
+    border-color: lightgray;
+    margin: 1px;
+    padding: 1px;
+}
+
 body{
     font-family: 'Rubik', sans-serif;
+}
+
+.parent-box{
+    min-width: 800px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #name{
