--- a/exer01.css
+++ b/exer01.css
@@ -19,10 +19,51 @@ body{
     margin-right: auto;
 }
 
+.parent-box.upper-half{
+    display: flex;
+    margin-top: 5em;
+}
+
+.child-1-box.left-box{
+    padding-top: auto;
+    padding-bottom: auto;
+    width: 50%;
+    
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.child-1-box.right-box{
+    display: flex;
+    position: relative;
+    min-width: 35%;
+    margin-right: 15%;
+    height: 0;
+    padding-bottom: 35%;
+}
+
+#favorites-body{
+    display: flex;
+}
+
+#favorites-left-column, #favorites-right-column{
+    min-width: 200px;
+    width: 50%;
+    background-color: aqua ;
+}
+
 #name{
     font-family: 'Zilla Slab', serif;
 }
 
-#profile_image{
-    max-width: 100px;
-}
+  
+#profile_image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+  }
