--- a/exer01.css
+++ b/exer01.css
@@ -24,23 +24,33 @@ body{
     margin-top: 5em;
 }
 
-.child-1-box.left-box{
-    padding-top: auto;
-    padding-bottom: auto;
-    width: 50%;
-    
+.child-1-box{
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 
+.child-1-box.left-box{
+    padding-top: auto;
+    padding-bottom: auto;
+    width: 50%;
+}
+
 .child-1-box.right-box{
-    display: flex;
     position: relative;
     min-width: 35%;
-    margin-right: 15%;
+
+    margin-left: auto;
+    margin-right: auto;
+
     height: 0;
     padding-bottom: 35%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#name{
+    font-size: 5em;
 }
 
 #favorites-body{
