--- a/exer01.css
+++ b/exer01.css
@@ -47,7 +47,7 @@ body{
     display: flex;
 }
 
-#favorites-left-column, #favorites-right-column{
+.left-column, .right-column{
     min-width: 200px;
     width: 50%;
     background-color: aqua ;
