--- a/exer01.css
+++ b/exer01.css
@@ -79,15 +79,14 @@ body{
 }
 
 .favorites-card{
-    color: white;
     margin-top: 1em;
     margin-bottom: 1em;
-    background-color: var(--accent);
     padding: 1em;
     padding-left: 2em;
     padding-right: 2em;
     border-radius: 1em;
-    
+    background-color: white;
+    filter: drop-shadow(    0px 8px 10px #0000001e);
 }
 
   
